--- a/fladeos_mark1(simple_pos)/fladeos_mark1(simple_pos).vbproj
+++ b/fladeos_mark1(simple_pos)/fladeos_mark1(simple_pos).vbproj
@@ -100,6 +100,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Transaksi.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Main.resx">
