--- a/fladeos_mark1(simple_pos)/fladeos_mark1(simple_pos).vbproj
+++ b/fladeos_mark1(simple_pos)/fladeos_mark1(simple_pos).vbproj
@@ -71,6 +71,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contoh.Designer.vb">
+      <DependentUpon>Contoh.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Contoh.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Koneksi.vb" />
     <Compile Include="Main.vb">
       <SubType>Form</SubType>
@@ -103,6 +109,9 @@
     <Compile Include="Transaksi.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Contoh.resx">
+      <DependentUpon>Contoh.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.vb</DependentUpon>
     </EmbeddedResource>
